--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -1,12 +1,7 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-# This workflow will install Deno then run `deno lint` and `deno test`.
-# For more information see: https://github.com/denoland/setup-deno
-
 name: Deno
+
+env:
+  DENO_DIR: .cache
 
 on:
   push:
@@ -22,8 +17,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Setup repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+
+      - uses: actions/cache@v4
+        with:
+          path: ${{ env.DENO_DIR }}
+          key: ${{ hashFiles('deno.lock') }}
 
       - name: Setup Deno
         uses: denoland/setup-deno@v1
@@ -34,7 +33,7 @@ jobs:
         run: deno fmt --check
 
       - name: Run linter
-        run: deno lint
+        run: deno lint --compact
 
       - name: Run tests
         run: deno test --coverage=coverage
