exclude for both lint and fmt

--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,7 @@
 {
   "fmt": {
     "semiColons": false,
-    "singleQuote": true,
-    "exclude": ["npm", "coverage", ".cache"]
-  }
+    "singleQuote": true
+  },
+  "exclude": ["npm", "coverage", ".cache"]
 }
