--- a/deno.json
+++ b/deno.json
@@ -3,5 +3,12 @@
     "semiColons": false,
     "singleQuote": true
   },
-  "exclude": ["npm", "coverage", ".cache"]
+  "exclude": ["npm", "coverage", ".cache"],
+  "imports": {
+    "@deno/dnt": "jsr:@deno/dnt@^0.41.3",
+    "@std/expect": "jsr:@std/expect@^1.0.15",
+    "@std/fmt": "jsr:@std/fmt@^1.0.6",
+    "@std/testing": "jsr:@std/testing@^1.0.11",
+    "table": "npm:table@^6.9.0"
+  }
 }
