--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@ name: Publish
 on:
   push:
     tags:
-      - "*"
+      - '*'
 
 jobs:
   release:
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: denoland/setup-deno@v1
         with:
-          deno-version: v1.x
+          deno-version: v2.x
       - name: Get tag version
         if: startsWith(github.ref, 'refs/tags/')
         id: get_tag_version
@@ -23,11 +23,11 @@ jobs:
       - name: install pnpm
         uses: pnpm/action-setup@v3
         with:
-          version: 8.x
+          version: 10.x
       - uses: actions/setup-node@v4
         with:
-          node-version: "18.x"
-          registry-url: "https://registry.npmjs.org"
+          node-version: '20.x'
+          registry-url: 'https://registry.npmjs.org'
       - name: npm build
         run: deno run -A ./scripts/npm.ts ${{steps.get_tag_version.outputs.TAG_VERSION}}
       - name: npm publish
