--- a/deno.json
+++ b/deno.json
@@ -14,7 +14,7 @@
   "name": "@stauro/spektr",
   "version": "0.1.2",
   "exports": {
-    ".": "./mod.ts",
+    ".": "./spektr.ts",
     "./plugins/color": "./plugins/color.ts"
   }
 }
