--- a/deno.json
+++ b/deno.json
@@ -9,7 +9,8 @@
     "@std/expect": "jsr:@std/expect@^1.0.15",
     "@std/testing": "jsr:@std/testing@^1.0.11",
     "picocolors": "npm:picocolors@^1.1.1",
-    "table": "npm:table@^6.9.0"
+    "table": "npm:table@^6.9.0",
+    "type-detect": "npm:type-detect@^4.1.0"
   },
   "name": "@stauro/spektr",
   "version": "0.1.2",
